--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
 spring.datasource.password=root
 # Security
-spring.security.user.name=admin
-spring.security.user.password=root
+# spring.security.user.name=admin
+# spring.security.user.password=root
