Auto generate DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 spring.jpa.database=POSTGRESQL
 # Mostrar consulta en terminal
 spring.jpa.show-sql=true
+# Generar BD
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= postgres
 spring.datasource.password=root
