--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-
-# Motor de base de datos
-spring.jpa.database=POSTGRESQL
+# spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=root
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
 # Mostrar consulta en terminal
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username= postgres
-spring.datasource.password=root
 # Security
-spring.security.user.name=admin
-spring.security.user.password=root
+# spring.security.user.name=admin
+# spring.security.user.password=root
