Save token in DataBase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.show-sql=true
 # Security
 # spring.security.user.name=admin
 # spring.security.user.password=root
+spring.main.allow-bean-definition-overriding=true
